--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,11 +1,10 @@
 server.port=${port:8080}
 
-spring.jpa.database=H2
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:basefavorecido;MODE=MYSQL;DB_CLOSE_DELAY=-1
+spring.jpa.database=MYSQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/basefavorecido?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.platform=h2
 
 spring.jpa.show-sql=true
 
@@ -13,7 +12,8 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 
 spring.jackson.date-format=yyyy-MM-dd
 
-logging.level.br.com.andrelemos.contabanco.base.favorecido.api=debug
+logging.level.com.andrelemos.contact.favorites=debug
+
 
 spring.datasource.hikari.maximum-pool-size=50
 spring.datasource.hikari.minimum-idle=2
